<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="6dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="9"
                android:background="@drawable/layout_text"
                android:orientation="vertical"
                android:padding="4dp"
                android:scrollbars="vertical">

                <ImageView
                    android:id="@+id/imageview_ambidatalogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ambidatalogo" />

                <TextView
                    android:id="@+id/textview_presentation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autoLink="map"
                    android:text="@string/corporatedescr"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#02b3e4" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageview_address"
                            android:layout_width="16dp"
                            android:layout_height="24dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/location" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingBottom="2dp">

                            <TextView
                                android:id="@+id/textview_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:autoLink="map"
                                android:text="@string/address1"
                                android:textAppearance="?android:textAppearanceSmall"
                                android:textColor="#02b3e4" />

                            <TextView
                                android:id="@+id/textview_address2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:autoLink="map"
                                android:text="@string/address2"
                                android:textAppearance="?android:textAppearanceSmall"
                                android:textColor="#02b3e4" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageview_phone"
                            android:layout_width="16dp"
                            android:layout_height="24dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/phone" />

                        <TextView
                            android:id="@+id/textview_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:autoLink="phone"
                            android:text="@string/phone"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="#02b3e4"
                            android:textColorLink="#02b3e4" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/imgview_email"
                            android:layout_width="16dp"
                            android:layout_height="24dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/mail" />

                        <TextView
                            android:id="@+id/textview_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:autoLink="email"
                            android:text="@string/companyemail"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColorLink="#02b3e4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageview_webaddress"
                            android:layout_width="16dp"
                            android:layout_height="24dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/link" />

                        <TextView
                            android:id="@+id/textview_webaddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:autoLink="web"
                            android:text="@string/companywebsite"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColorLink="#02b3e4" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/layout_text"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imagebtn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/facebooklogo" />

                <ImageView
                    android:id="@+id/imagebtn_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/twitterlogo" />

                <ImageView
                    android:id="@+id/imagebtn_linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/linkedinlogo" />

                <ImageView
                    android:id="@+id/imagebtn_youtube"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/youtubelogo" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>